--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,14 @@
 @import "styles/external/nico/css/bootstrap.css";
+
+footer {
+    background-color: #333;
+}
+
+.social-media {
+    [class$="-icon"] {
+        svg {
+            width: 16px;
+            height: 16px;
+        }
+    }
+}
