--- a/styles/styles/main.scss
+++ b/styles/styles/main.scss
@@ -1,5 +1,9 @@
 @import "styles/external/nico/css/bootstrap.css";
 
+main img {
+    max-width: 100%;
+}
+
 footer {
     background-color: #333;
 }
