feat(example): カルーセルを使うためのHTMLを用意した

--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -33,6 +33,7 @@
 /* 横幅が768px以上のときの設定 */
 @media (min-width: 768px) {
     #ll-nav li > a {
+        padding: 0.75em 5em;
         border-right: 1px solid #fff;
     }
 
