--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -1,63 +1,105 @@
 /* サイトのヘッダー */
 #ll-header {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* サイトのロゴ */
 #ll-header .ll-logo {
-    height: auto;
-    margin-top: 15px;
-    padding: 15px;
+  height: auto;
+  margin-top: 15px;
+  padding: 15px;
 }
 
 /* サイトのグローバルナビゲーション */
 #ll-nav {
-    min-height: 0;
-    margin-bottom: 0;
-    border-width: 0;
+  min-height: 0;
+  margin-bottom: 0;
+  border-width: 0;
 }
 
 /* サイトのグローバルナビゲーション内の各アイテム */
 #ll-nav li {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 /* サイトのグローバルナビゲーション内の各リンク */
 #ll-nav li > a {
-    margin-top: 0;
-    margin-bottom: 0;
-    border-radius: 0;
-    color: #fff;
-    text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-radius: 0;
+  color: #fff;
+  text-transform: uppercase;
 }
-/* 横幅が768px以上のときの設定 */
+/* グローバルナビゲーションの各描画領域ごとのスタイル定義 */
 @media (min-width: 768px) {
-    #ll-nav li > a {
-        padding: 0.75em 5em;
-        border-right: 1px solid #fff;
-    }
+  #ll-nav li > a {
+    padding: 0.75em 1.5em;
+    border-right: 1px solid #fff;
+  }
 
-    #ll-nav li:first-child > a {
-        border-left: 1px solid #fff;
-    }
+  #ll-nav li:first-child > a {
+    border-left: 1px solid #fff;
+  }
+}
+@media (min-width: 890px) {
+  #ll-nav li > a {
+    padding: 0.75em 2em;
+  }
+}
+@media (min-width: 1000px) {
+  #ll-nav li > a {
+    padding: 0.75em 2.5em;
+  }
+}
+@media (min-width: 1150px) {
+  #ll-nav li > a {
+    padding: 0.75em 3.2em;
+  }
+}
+@media (min-width: 1330px) {
+  #ll-nav li > a {
+    padding: 0.75em 4em;
+  }
 }
 
 /* グローバルナビゲーションの現在位置を示すスタイル */
 #ll-nav .active > a {
-    position: relative;
-    pointer: default;
-    pointer-events: none;
-    background-color: #ff50ac;
-    color: #fff;
+  position: relative;
+  pointer: default;
+  pointer-events: none;
+  background-color: #ff50ac;
+  color: #fff;
 }
 
 /* グローバルナビゲーションの現在位置を示すスタイル */
-#ll-nav .active > a:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    border-bottom: 5px solid #ffdc00;
+#ll-nav .active > a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-bottom: 5px solid #ffdc00;
+}
+
+/* トップページ：カルーセル内の画像 */
+.ll-slides img {
+  max-width: 100%;
+}
+
+/* トップページ：カルーセル連携ページネーションの外枠 */
+.ll-slides-pagination {
+  list-style-type: none;
+  text-align: center;
+}
+
+/* トップページ：カルーセル連携ページネーションの各要素 */
+.ll-slides-pagination li {
+  display: inline-block;
+  color: #ff64b1;
+}
+
+/* トップページ：カルーセル連携ページネーションの現在のページを示す要素 */
+.ll-slides-pagination .ll-slides-pagination__active {
+  color: #fff;
 }
