fix(ch05): サンプルコードが間違っていたのを修正

--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -190,22 +190,23 @@
 
 /* ライブステージページ：動画の情報タブの各描画領域ごとのスタイル定義 */
 @media (min-width: 768px) {
-  .ll-video-tabs > li > a {
+  .ll-video-detail .ll-video-tabs > li > a {
     padding: 5px 0;
     border-right: 1px solid #fff;
   }
 
-  .ll-video-tabs > li:last-child > a {
+  .ll-video-detail .ll-video-tabs > li:last-child > a {
     border-right: 0;
   }
 
-  .ll-video-tabs > li.active > a {
+  .ll-video-detail .ll-video-tabs > li.active > a {
+    border-top: 0;
     border-bottom: 0;
     background-color: #ff50ac;
     color: #fff;
   }
 
-  .ll-video-tabs > li.active > a::after {
+  .ll-video-detail .ll-video-tabs > li.active::after {
     content: "";
     display: block;
     position: absolute;
@@ -216,12 +217,12 @@
   }
 }
 @media (min-width: 992px) {
-  .ll-video-tabs > li > a {
+  .ll-video-detail .ll-video-tabs > li > a {
     font-size: 0.8125em;
   }
 }
 @media (min-width: 1000px) {
-  .ll-video-tabs > li > a {
+  .ll-video-detail .ll-video-tabs > li > a {
     font-size: 0.875em;
   }
 }
