chore(layouts): 本のプレビューサイトの上部にあるリンクの遷移先を変更

--- a/articles/layouts/layout.html.erb
+++ b/articles/layouts/layout.html.erb
@@ -19,7 +19,7 @@
     <header class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="//o2project.github.io/start-dash-of-site-making/">サイト制作のSTART:DASH!!</a>
+                <a class="navbar-brand" href="http://startdash.o2p.jp/book/">サイト制作のSTART:DASH!!</a>
             </div>
         </div>
     </header>
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-8">
                     <div class="list-group">
-                        <a class="list-group-item" href="https://github.com/o2project/start-dash-of-site-making">https://github.com/o2project/start-dash-of-site-making</a>
+                        <a class="list-group-item" href="//github.com/o2project/start-dash-of-site-making">https://github.com/o2project/start-dash-of-site-making</a>
                         <a class="list-group-item" href="mailto:ta2+startdash@o2p.jp">ta2+startdash@o2p.jp</a>
                     </div>
                 </div>
